second i think commit

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-GB">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>New Web Project</title>
+        <title>JatSites</title>
     </head>
     <body>
-        <h1>New Web Project Page</h1>
+        <h1>Nothing here 😀</h1>
     </body>
 </html>
