--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en-GB">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
+                <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
         <title>JatSites</title>
     </head>
     <body>
-        <h1>Nothing here 😀</h1>
+    	<div id="toolbar">
+    		
+    	</div>
+    	<br/>
+        <h1 align="center">JatSites</h1>
     </body>
 </html>
