--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     </head>
     <body>
     	<div id="toolbar">
-    		
+
+    		<div class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+               </div>
+            </div>
+    	    <a style="margin-left: 475px; text-decoration: none; color: #000; font-size: 20px;" href="index.html">Jatsites</a>
     	</div>
     	<br/>
-        <h1 align="center">JatSites</h1>
     </body>
 </html>
