--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     	<div id="toolbar">
 
     		<div class="dropdown">
-                <button class="dropbtn">Menu</button>
+                <button class="dropbtn" style="font-size:30px;">&#8801;</button>
                 <div class="dropdown-content">
                     <a href="#">Link 1</a>
                     <a href="#">Link 2</a>
