--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     		<div class="dropdown">
                 <button class="dropbtn" style="font-size:30px;">&#8801;</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">Bla 1</a>
+                    <a href="#">Bla 2</a>
+                    <a href="#">Bla 3</a>
                </div>
             </div>
     	    <a style="margin-left: 475px; text-decoration: none; color: #000; font-size: 20px;" href="index.html">Jatsites</a>
