--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="#">Bla 3</a>
                </div>
             </div>
-    	    <a style="margin-left: 475px; text-decoration: none; color: #000; font-size: 26px;" href="index.html">Jatsites</a>
+    	    <a class="a" href="index.html">Jatsites</a>
     	</div>
     	<br/>
     </body>
