--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
                 <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
-        <title>JatSites</title>
+        <title>Jat</title>
     </head>
     <body>
     	<div id="toolbar">
@@ -17,7 +17,7 @@
                     <a href="#">Bla 3</a>
                </div>
             </div>
-    	    <a class="a" href="index.html">Jatsites</a>
+    	    <a class="a" href="index.html">Jat!</a>
     	</div>
     	<br/>
     </body>
