--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
                 <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
+        <script src="cookies.js" type="text/javascript"></script>
         <title>Jat</title>
     </head>
     <body>
@@ -20,5 +22,10 @@
     	    <a class="a" href="index.html">Jat!</a>
     	</div>
     	<br/>
+    	<h1>JatApps</h1>
+    	<br/>
+    	<iframe src="thing1.htm" height="300px" width="1160px" name="jatapps" class="appframe">
+    		<p>Something went wrong :(</p>
+    	</iframe>
     </body>
 </html>
