--- a/index.html
+++ b/index.html
@@ -22,10 +22,15 @@
     	    <a class="a" href="index.html">Jat!</a>
     	</div>
     	<br/>
-    	<h1>JatApps</h1>
+    	<hr />
+    	<h1 align="center">JatApps</h1>
     	<br/>
     	<iframe src="thing1.htm" height="300px" width="1160px" name="jatapps" class="appframe">
     		<p>Something went wrong :(</p>
     	</iframe>
+    	<form id="form" onsubmit="return false;">
+            <input type="text" id="userInput" />
+            <input type="submit" onclick="othername();" />
+        </form>
     </body>
 </html>
