--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script>
             function othername() {
                 var input = document.getElementById("userInput").value;
-                document.cookie = input;
+                document.cookie = "uspin=" + input;
             }
         </script>
     </body>
