--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			  if (passwordText == "thisisnotthepassword") {
 			  	return true;
 			  };
-			  alert("NO!");
+			  alert("GO AWAY");
 			  return false;
 			}
 		</script>
