--- a/thetest.html
+++ b/thetest.html
@@ -10,6 +10,7 @@
 		<h1>The Test Of Doom</h1>
 		<h3>{JR}-NC 2020 NO CHEATING ALLOWED</h3>
 		<h4>There are 5 questions in this test, to be completed in 1 minute maximum. Answer in CAPITALS.</h4>
+		<h4>Note: if you get it wrong you cannot progress. READ THE QUESTIONS!</h4>
 		<button onclick="setTimeout(timerFunction, 60000), start()">START TEST</button>
 		<script>
 		  function start() {
