Commit the 33rd

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Jat Password</title>
 		<style>
-		    html{font-family:sans-serif;}
+		    html{font-family:sans-serif;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}
 		    a#a{text-decoration:none;color:#0000b3;font-size:25px;}
 		    a#a2{text-decoration:none;color:#0000b3;}
 		    input{height:25px;width:200px;}
@@ -26,6 +26,6 @@
 		<h3 align="center">This website requires you to enter a password to view it! You must pass The Test Of Doom to get the password.</h3>
 		<h3 align="center">Take The Test Of Doom at <a href="thetest.html" id="a2">jomunatech.co.uk/thetest.html</a></h3>
 		<p align="center">Password: <input id="passwordBox" type="password" /></p>
-		<p align="center"><a href="https://jomunatech.co.uk/a_B€c%25de_f£gh@i-jk¬lm¦nop$q%5Ers+t%60u'vw_xy~z.html" onclick="return checkPassword();" id="a">Check Password</a></p>
+		<p align="center"><a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html" onclick="return checkPassword();" id="a">Check Password</a></p>
 	</body>
 </html>
