--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -30,7 +30,7 @@
     		<p>Something went wrong :(</p>
     	</iframe>
     	<br/>
-    	<form id="form" onsubmit="return false;">
+    	<!--<form id="form" onsubmit="return false;">
     		<p id="loggedin">You are logged out</p>
             <input type="password" id="userInput" placeholder="Set USPIN" />
             <input type="submit" onclick="setTimeout(othername, 500)" id="sbtn1" />
@@ -66,6 +66,6 @@
                 	document.getElementById("loggedin").innerHTML = "You are logged in";
                 }
             }
-        </script>
+        </script>-->
     </body>
 </html>
