--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -1,71 +1,222 @@
 <!DOCTYPE html>
 <html lang="en-GB">
-    <head>
+    <head data-starData="head-">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
-                <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="cookies.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFTaabPhK44tV5e8SG3HCxXOx4eMzN9Y&callback=myMap"></script>
+        <!-- starcode-version-3.0 =) embed data-starData attr -->
+        
         <title>Jat</title>
+        <!-- data-starData="/head" -->
     </head>
-    <body onload="li()">
+    <body data-starData="body-" id="body" onload="keepColour()">
     	<div id="toolbar">
 
     		<div class="dropdown">
                 <button class="dropbtn" style="font-size:30px;">&#8801;</button>
                 <div class="dropdown-content">
-                    <a href="#">Bla 1</a>
-                    <a href="#">Bla 2</a>
-                    <a href="#">Bla 3</a>
+                    <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;<i class="fa fa-home fa-pulse" aria-hidden="true"></i></a>
+                    <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></a>
+                    <a href="#">JatStorage&nbsp;<div id="div1" class="fa"></div></a>
+                    <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
                </div>
             </div>
     	    <a class="a" href="index.html">Jat!</a>
+    	    <div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close Settings</a>
+  <div class="overlay-content">
+  	<br/>
+      <p>Themes:</p>
+      <a title="Emibug Blue"><canvas onclick="blueChange()" height="50px" width="75px" style="margin-left:55px;background-color:#0000b3;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="EBreakfast C4"><canvas onclick="redChange()" height="50px" width="75px" style="background-color:#ff0040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Millie Yellow"><canvas onclick="yellowChange()" height="50px" width="75px" style="background-color:#ffbf00;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Johbug Green"><canvas onclick="greenChange()" height="50px" width="75px" style="background-color:#080;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Tomobug Blue"><canvas onclick="tBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Japanese Grape"><canvas onclick="purpleChange()" height="50px" width="75px" style="background-color:purple;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Snuggle Grey"><canvas onclick="greyChange()" height="50px" width="75px" style="background-color:#666;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Mummy Maroon"><canvas onclick="maroonChange()" height="50px" width="75px" style="background-color:#800040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Daddy Uniform"><canvas onclick="dBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Fuji Wisteria"><canvas onclick="fujiChange()" height="50px" width="75px" style="background-color:#c9a0dc;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Grandad Evening"><canvas onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Green-fingered Green"><canvas onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a onclick="resetColour()">Reset</a>
+      <p>b</p>
+      <br/>
+      <br/>
+      <script>
+      var bar = document.getElementById("toolbar");
+      var theBody = document.getElementById("body");
+        function resetColour() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#ccc";
+            theBody.style.fontFamily = "'Ubuntu'";
+            var backgroundColour = "#ccc";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "'Ubuntu'";
+            localStorage.setItem("fontKey", fontFamily);
+      	}
+      	function blueChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#0000b3";
+            var backgroundColour = "#0000b3";
+            localStorage.setItem("colourKey", backgroundColour);
+      	}
+      	function redChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#ff0040";
+            var backgroundColour = "#ff0040";
+            localStorage.setItem("colourKey", backgroundColour);
+      	}
+      	function dGreenChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#040";
+            var backgroundColour = "#040";
+            localStorage.setItem("colourKey", backgroundColour);
+      	}
+      	function orangeChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#ff6500";
+            theBody.style.fontFamily = "Comic Sans MS";
+            var backgroundColour = "#ff6500";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "Comic Sans MS";
+            localStorage.setItem("fontKey", fontFamily);
+      	}
+      	function yellowChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#ffbf00";
+            theBody.style.fontFamily = "'Dr Sugiyama'";
+            var backgroundColour = "#ffbf00";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "'Dr Sugiyama'";
+            localStorage.setItem("fontKey", fontFamily);
+      	}
+      	function greenChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#080";
+            theBody.style.fontFamily = "'Share'";
+            var backgroundColour = "#080";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "'Share'";
+            localStorage.setItem("fontKey", fontFamily);
+      	}
+      	function purpleChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "purple";
+            var backgroundColour = "purple";
+            localStorage.setItem("colourKey", backgroundColour);
+      	}
+      	function fujiChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#c9a0dc";
+            var backgroundColour = "#c9a0dc";
+            localStorage.setItem("colourKey", backgroundColour);
+      	}
+      	function greyChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#666";
+            var backgroundColour = "#666";
+            localStorage.setItem("colourKey", backgroundColour);
+      	}
+      	function dBlueChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#002050";
+            theBody.style.fontFamily = "'Kalam'";
+            var backgroundColour = "#002050";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "'Kalam'";
+            localStorage.setItem("fontKey", fontFamily);
+      	}
+      	function tBlueChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#24bdff";
+            theBody.style.fontFamily = "consolas";
+            var backgroundColour = "#24bdff";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "consolas";
+            localStorage.setItem("fontKey", fontFamily);
+      	}
+      	function maroonChange() {
+            bar.style.backgroundImage = "none";
+            bar.style.backgroundColor = "#800040";
+            theBody.style.fontFamily = "'Poiret One'";
+            theBody.style.fontWeight = "bold";
+            var backgroundColour = "#800040";
+            localStorage.setItem("colourKey", backgroundColour);
+            var fontFamily = "'Poiret One'";
+            localStorage.setItem("fontKey", fontFamily);
+            var fontStyle = "bold";
+            localStorage.setItem("styleKey", fontStyle);
+      	}
+      	function keepColour() {
+            var backgroundColour = localStorage.getItem("colourKey");
+            bar.style.backgroundColor = backgroundColour;	
+            var fontFamily = localStorage.getItem("fontKey");
+            theBody.style.fontFamily = fontFamily;	
+            var fontStyle = localStorage.getItem("styleKey");
+            theBody.style.fontWeight = fontStyle;	
+      	}
+      </script>
+  </div>
+</div>
     	</div>
-    	<br/>
+    	<span style="font-size:30px;cursor:pointer" onclick="openNav()">Settings</span>
+    	<h1 data-starData="h1-1">JAT!</h1>
     	<hr />
-    	<h3 align="center">JatApps</h3>
+    	<h3 data-starData="h3-1">JatApps</h3>
+    	<div id="div1" class="fa"></div>
+
+<script>
+function openfolder() {
+  var a;
+  a = document.getElementById("div1");
+  a.innerHTML = "&#xf114;";
+  setTimeout(function () {
+      a.innerHTML = "&#xf115;";
+    }, 500);
+}
+openfolder();
+setInterval(openfolder, 1000);
+</script>
+<script>
+function openNav() {
+  document.getElementById("myNav").style.width = "40%";
+    document.getElementById("body").style.marginLeft = "478px";
+
+}
+function closeNav() {
+  document.getElementById("myNav").style.width = "0%";
+    document.getElementById("body").style.marginLeft = "8px";
+}
+var x = document.getElementById("myNav");
+var y = document.getElementById("body");
+window.onclick = function(event) {
+  if (event.target == y) {
+    x.style.width = "0%";
+      document.getElementById("body").style.marginLeft = "8px";
+  };
+};
+</script>
     	<br/>
-    	<iframe src="thing1.htm" height="300px" width="1130px" name="jatapps" class="appframe">
-    		<p>Something went wrong :(</p>
-    	</iframe>
     	<br/>
-    	<!--<form id="form" onsubmit="return false;">
-    		<p id="loggedin">You are logged out</p>
-            <input type="password" id="userInput" placeholder="Set USPIN" />
-            <input type="submit" onclick="setTimeout(othername, 500)" id="sbtn1" />
-            <input type="password" id="userInput2" placeholder="Use USPIN" />
-            <input type="submit" onclick="setTimeout(tem, 500)" />
-        </form>
-        <script>
-            function othername() {
-                var input = document.getElementById("userInput").value;
-                localStorage.setItem("uspin", input);
-                document.getElementById("userInput").style.opacity = "0"; 
-                document.getElementById("userInput").style.marginLeft = "-236px"; 
-                document.getElementById("sbtn1").style.opacity = "0"; 
-            }
-            function tem() {
-                var input = document.getElementById("userInput").value;
-                var password = localStorage.getItem("uspin");
-                var guess = "y";
-                while (guess !== password) {
-                    var guess = document.getElementById("userInput2").value;
-                    if (guess == password) {
-                        alert("ACCESS GRANTED");
-                        document.getElementById("userInput").style.opacity = "100"; 
-                        document.getElementById("userInput").style.marginLeft = "0px"; 
-                        document.getElementById("sbtn1").style.opacity = "100"; 
-                    }
-                    if (guess !== password) {
-                        window.confirm("ACCESS DENIED\nThis page will not respond serves you right.");
-                    }
-                }
-                var lI = localStorage.getItem("loggedIn");
-                if (lI = "false") {
-                	document.getElementById("loggedin").innerHTML = "You are logged in";
-                }
-            }
-        </script>-->
+
     </body>
+    <!-- data-starData="/body" -->
 </html>
+<!--
+	CREDITS:
+	    DESIGNER: 藤田丈
+	    CODER: 藤田丈
+	    JAT {JR-NC} FOUNDER: 藤田丈
+	    {JR-NC} LICENCE: 藤田丈-2019-BID8164
+	    STARCODE: SCv3.0 (B) data-starData attr 藤田丈
+	    SPECIAL THANKS TO: E and 藤田友
+	    ------------------------------------------------------------------------
+	    {JR-NC}-藤田丈-2020 This website and its domain (jomunatech.co.uk) etc. 
+	    are the property of ME; the owner has a {JR} certificate.
+-->
+	 
