--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ document.onkeydown = function(e) {
 			};
 		</script>
 	</head>
-	<body>
+	<body id="body">
 		<h1 align="center">Jat</h1>
 		<h3 align="center">This website requires you to enter a password to view it! You must pass The Test Of Doom to get the password.</h3>
 		<h3 align="center">Take The Test Of Doom at <a href="thetest.html" id="a2">jomunatech.co.uk/thetest.html</a></h3>
