--- a/404.html
+++ b/404.html
@@ -1,1 +1,11 @@
-<h1 align="center" style="font-family: sans-serif;">404</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>BAD TOMOBUG!</title>
+  </title>
+  <body>
+    <h1 align="center" style="font-family: sans-serif;">404</h1><br><br><br><br>
+    <h1 align="center" style="font-family: sans-serif;">A Tomobug Chewed through your cable.</h1><br>
+    <h3 align="center" style="font-family: sans-serif;">Oh dear.</h3><br>
+  </body>
+</html>
