--- a/404.html
+++ b/404.html
@@ -7,6 +7,6 @@
     <br><h1 align="center" style="font-family:sans-serif;">404</h1><br><br>
     <h1 align="center" style="font-family:sans-serif;">A Tomobug chewed through your cable.</h1><br>
     <h3 align="center" style="font-family:sans-serif;">Oh dear.</h3><br>
-    <a align="center" style="font-family:sans-serif;text-decoration:none;" href="https://jomunatech.co.uk/">Back to JomunATech</a>
+    <p align="center"><a style="font-family:sans-serif;text-decoration:none;color:#0000b3;" href="https://jomunatech.co.uk/">Back to JomunATech</a></p>
   </body>
 </html>
