--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
   <body>
     <h1 align="center" style="font-family:sans-serif;font-size:70px;">404</h1>
     <h1 align="center" style="font-family:sans-serif;">A Tomobug chewed through your cable.</h1>
-    <p align="center"><img src="404.png" width="150px" height="150px" /></p><br>
+    <p align="center"><img src="404.png" width="150px" height="150px" /></p>
     <p align="center"><a style="font-family:sans-serif;text-decoration:none;color:#0000b3;font-weight:bold;" href="https://jomunatech.co.uk/">
       Back to JomunATech</a></p>
   </body>
