--- a/404.html
+++ b/404.html
@@ -4,8 +4,9 @@
     <title>BAD TOMOBUG!</title>
   </title>
   <body>
-    <h1 align="center" style="font-family:sans-serif;font-size:70px;">404</h1>
+    <h1 align="center" style="font-family:sans-serif;font-size:40px;">404</h1>
     <h1 align="center" style="font-family:sans-serif;">A Tomobug chewed through your cable.</h1>
+    <h3 align="center" style="font-family:sans-serif;">It looks like we can't find what you searched for :(</h3>
     <p align="center"><img src="404.png" width="150px" height="150px" /></p>
     <p align="center"><a style="font-family:sans-serif;text-decoration:none;color:#0000b3;font-weight:bold;" href="https://jomunatech.co.uk/">
       Back to JomunATech</a></p>
