Commit the 72nd

--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -3,48 +3,55 @@
     <head data-starData="head-">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords" content="Jat, Jomunatech, Johtifications">
+        <meta name="description" content="The Official Jat Website">
+        <meta name="author" content="ME">
         <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
         <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="cookies.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFTaabPhK44tV5e8SG3HCxXOx4eMzN9Y&callback=myMap"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- starcode-version-3.0 =) embed data-starData attr -->
         
         <title>Jat</title>
         <!-- data-starData="/head" -->
     </head>
     <body data-starData="body-" id="body" onload="keepColour()">
+    	<noscript>Oh dear turn JavaScript on or this won't work.</noscript>
     	<div id="toolbar">
 
     		<div class="dropdown">
                 <button class="dropbtn" style="font-size:30px;">&#8801;</button>
                 <div class="dropdown-content">
-                    <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;<i class="fa fa-home fa-pulse" aria-hidden="true"></i></a>
-                    <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" aria-hidden="true"></i></a>
-                    <a href="#">JatStorage&nbsp;<div id="div1" class="fa"></div></a>
-                    <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
+                    <a href="Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html">Jat Home&nbsp;<i class="fa fa-home" > </i></a>
+                    <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i></a>
+                    <a href="#">JatStorage&nbsp;<div id="div1" class="fa"> </div></a>
+                    <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
+                    <a style="cursor:pointer" onclick="openNav()">Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
                </div>
             </div>
-    	    <a class="a" href="index.html">Jat!</a>
+    	    <a class="a" href="index.html">Log Out</a>
     	    <div id="myNav" class="overlay">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close Settings</a>
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">Close Settings&nbsp;<i class="fa fa-cog fa-spin"> </i></a>
   <div class="overlay-content">
   	<br/>
       <p>Themes:</p>
-      <a title="Emibug Blue"><canvas onclick="blueChange()" height="50px" width="75px" style="margin-left:55px;background-color:#0000b3;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="EBreakfast C4"><canvas onclick="redChange()" height="50px" width="75px" style="background-color:#ff0040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Millie Yellow"><canvas onclick="yellowChange()" height="50px" width="75px" style="background-color:#ffbf00;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Johbug Green"><canvas onclick="greenChange()" height="50px" width="75px" style="background-color:#080;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Tomobug Blue"><canvas onclick="tBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Japanese Grape"><canvas onclick="purpleChange()" height="50px" width="75px" style="background-color:purple;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Snuggle Grey"><canvas onclick="greyChange()" height="50px" width="75px" style="background-color:#666;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Mummy Maroon"><canvas onclick="maroonChange()" height="50px" width="75px" style="background-color:#800040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Daddy Uniform"><canvas onclick="dBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Fuji Wisteria"><canvas onclick="fujiChange()" height="50px" width="75px" style="background-color:#c9a0dc;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Grandad Evening"><canvas onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a title="Green-fingered Green"><canvas onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
-      <a onclick="resetColour()">Reset</a>
+      <a title="Emibug Blue"><canvas class="canvas canvasmargin" onclick="blueChange()" height="50px" width="75px" style="background-color:#0000b3;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="EBreakfast C4"><canvas class="canvas" onclick="redChange()" height="50px" width="75px" style="background-color:#ff0040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Millie Yellow"><canvas class="canvas" onclick="yellowChange()" height="50px" width="75px" style="background-color:#ffbf00;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Johbug Green"><canvas class="canvas" onclick="greenChange()" height="50px" width="75px" style="background-color:#080;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Tomobug Blue"><canvas class="canvas canvasmargin" onclick="tBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#24bdff;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Japanese Grape"><canvas class="canvas" onclick="purpleChange()" height="50px" width="75px" style="background-color:purple;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Snuggle Grey"><canvas class="canvas" onclick="greyChange()" height="50px" width="75px" style="background-color:#666;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Mummy Maroon"><canvas class="canvas" onclick="maroonChange()" height="50px" width="75px" style="background-color:#800040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Daddy Uniform"><canvas class="canvas canvasmargin" onclick="dBlueChange()" height="50px" width="75px" style="float:left;margin-left:55px;background-color:#002050;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Fuji Wisteria"><canvas class="canvas" onclick="fujiChange()" height="50px" width="75px" style="background-color:#c9a0dc;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Grandad Evening"><canvas class="canvas" onclick="orangeChange()" height="50px" width="75px" style="background-color:#ff6500;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <a title="Green-fingered Green"><canvas class="canvas" onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
+      <p>&nbsp;</p><p>&nbsp;</p>
       <p>Placeholder</p>
+      <a onclick="resetColour()" id="resetButton">Reset</a>
       <br/>
       <br/>
       <script>
@@ -164,12 +171,19 @@
   </div>
 </div>
     	</div>
-    	<span style="font-size:30px;cursor:pointer" onclick="openNav()">Settings</span>
-    	<h1 data-starData="h1-1">JAT!</h1>
-    	<hr />
-    	<h3 data-starData="h3-1">JatApps</h3>
-    	<div id="div1" class="fa"></div>
-
+    	<h1 data-starData="h1-1" id="toggle">JAT!</h1>
+    	<p id="toggleTarget" style="display:none;" align="center">It's Amazing!</p>
+    	<hr style="background-color:#ccc; height:3px; border: none;" id="hr1" />
+    	<h2 data-starData="h2-1">A faster way to do err... stuff</h2>
+    	<div>
+    		<script>
+    			$(document).ready(function(){
+                    $("#toggle").click(function(){
+                        $("#toggleTarget").slideToggle("slow");
+                    });
+                });
+    		</script>
+    	</div>
 <script>
 function openfolder() {
   var a;
@@ -185,7 +199,7 @@ setInterval(openfolder, 1000);
 <script>
 function openNav() {
   document.getElementById("myNav").style.width = "40%";
-    document.getElementById("body").style.marginLeft = "478px";
+    document.getElementById("body").style.marginLeft = "40.75%";
 
 }
 function closeNav() {
